fix html spacing and make subheader more contrast

--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ h3 {
 
 h3 + .subheader {
   font-style: italic;
-  color: rgba(0, 116, 137, .56);
+  color: rgba(0, 116, 137, .8);
   margin-top: -8px;
   margin-bottom: 10px;
 }
